@@ -5,7 +5,7 @@ import fr.kenlek.jpgen.data.path.JavaPath;
 import java.util.List;
 import java.util.stream.Collectors;
 
-public class FunctionDeclaration extends FunctionType.Wrapper implements Declaration<FunctionDeclaration>
+public class FunctionDeclaration extends FunctionType.Wrapper implements Declaration
 {
     private final JavaPath m_path;
     public final Linkage linkage;
@@ -13,6 +13,8 @@ public class FunctionDeclaration extends FunctionType.Wrapper implements Declara
     public FunctionDeclaration(JavaPath path, Linkage linkage, FunctionType descriptorType, List<String> parametersNames)
     {
         super(descriptorType, parametersNames);
+        Declaration.checkPath(path);
+
         this.m_path = path;
         this.linkage = linkage;
     }
@@ -29,10 +31,10 @@ public class FunctionDeclaration extends FunctionType.Wrapper implements Declara
         List<FunctionType.Parameter> parameters = this.createParameters();
         if (parameters.isEmpty())
         {
-            return String.format("FunctionDeclaration[%s, descriptor=%s, linkage=%s]", this.path(), this.descriptorType, this.linkage);
+            return "FunctionDeclaration[%s, descriptor=%s, linkage=%s]".formatted(this.path(), this.descriptorType, this.linkage);
         }
 
-        return String.format("FunctionDeclaration[%s, linkage=%s, args={%s}]",
-                this.path(), this.linkage, parameters.stream().map(FunctionType.Parameter::toString).collect(Collectors.joining(", ")));
+        return "FunctionDeclaration[%s, linkage=%s, args={%s}]".formatted(this.path(), this.linkage,
+                parameters.stream().map(FunctionType.Parameter::toString).collect(Collectors.joining(", ")));
     }
 }
